# sparkai-chatbot-frontend

./: .env.devhost  .env.prodhost  .gitattributes  .gitignore  .prettierignore  .prettierrc  et --hard bfe6608e285bfb7f35245d6c1418d6eb742bd50b  index.html  jest.config.cjs  jest.setup.js  package-lock.json  package.json  readme.rst  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
website/: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
website/local/: settings.dev.py
website/mytenderweb/: manage.py
website/mytenderweb/core/utils/: collections.py  misc.py
website/mytenderweb/project/: asgi.py  brevo.py  forms.py  urls.py  views.py  wsgi.py
website/mytenderweb/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
website/mytenderweb/templates/: ITServices.html  about.html  aiblog.html  aiconsulting.html  base.html  bookcall.html  businessintel.html  calculator.html  calculatorThankYou.html  cancel.html  convert.py  data_protection_overview.html  datapilot.html  enrollmentTesting.html  facilitymanagement.html  financialservices.html  guide.html  guideThankYouForm.html  healthcare.html  index.html  index_new.html  intro.html  languageengine.html  languageengines.html  marketresearch.html  oxygenFinanceLandingPage.html  procurement.html  publicsector.html  recruitmentagency.html  roi_results.html  scripts.html  security.html  story.html  success.html  telecoms.html  terms_and_conditions.html  thankyou.html
website/scripts/: entrypoint.sh  production_data.py
(+285 files in other folders)
